examples/5g-network/k8s/amf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "amf"
      app: amf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "amf"
        networkservicemesh.io/impl: "5g-network"
        app: amf
    spec:
      hostname: amf
      serviceAccount: nsm-acc
      containers:
        - name: amf
          image: free5gc-compose_free5gc-amf
          imagePullPolicy: Never
          command: ['sh', '-c', "until nslookup amf.5g-network.nsm.local; do echo waiting for myservice; sleep 2; done; ./amf -amfcfg ../config/amfcfg.conf"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/amfcfg.conf
              subPath: amfcfg.conf
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
        - name: sidecar-endpoint
          image: networkservicemesh/icmp-dns-sidecar-nse:latest
          command: ["/bin/sidecar-nse", "-dns"]
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              networkservicemesh.io/socket: 1
        - name: coredns
          image: networkservicemesh/coredns:master
          imagePullPolicy: IfNotPresent
          args: ["-conf", "/etc/coredns/Corefile"]
          volumeMounts:
          - mountPath: /etc/coredns
            name: nsm-coredns-volume
        # - name: tcpdump
        #   image: corfr/tcpdump
        #   args: ["-i", "any", "-w", "/data/dump.pcap"]
      volumes:
      - name: nsm-coredns-volume
        emptyDir: {}
      - name: config
        configMap:
          name: amf-config
      - name: free5gc-config
        configMap:
          name: free5gc-config
metadata:
  name: "amf"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: amf
spec:
  selector:
    app: amf
  clusterIP: None
