examples/5g-network/k8s/ausf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "ausf"
      app: ausf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "ausf"
        app: ausf
    spec:
      hostname: ausf
      containers:
        - name: ausf
          image: free5gc-compose_free5gc-ausf
          imagePullPolicy: Never
          command: ["./ausf", "-ausfcfg", "../config/ausfcfg.conf"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/ausfcfg.conf
              subPath: ausfcfg.conf
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
          ports:
            - containerPort: 29509
      volumes:
        - name: config
          configMap:
            name: ausf-config
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "ausf"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: ausf
spec:
  selector:
    app: ausf
  clusterIP: None
