examples/5g-network/k8s/db.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "db"
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "db"
        app: db
    spec:
      hostname: db
      containers:
        - name: db
          image: mongo
          command: ["mongod"]
          args: ["--port","27017", "--bind_ip", "0.0.0.0"]
          volumeMounts:
            - name: config
              mountPath: /etc/mongod.conf
              subPath: mongod.conf
          ports:
            - containerPort: 27017
      volumes:
        - name: config
          configMap:
            name: mongo-config
metadata:
  name: "db"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a


---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  clusterIP: None
