examples/5g-network/k8s/n3iwf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "n3iwf"
      app: n3iwf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "n3iwf"
        app: n3iwf
    spec:
      hostname: n3iwf
      imagePullSecrets:
      - name: gcrsecret
      containers:
        - name: n3iwf
          image: gcr.io/architecturecloudnative/free5gc-compose_free5gc-n3iwf
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args: ["./n3iwf-ipsec.sh && ./n3iwf -n3iwfcfg ../config/n3iwfcfg.conf"]
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/n3iwfcfg.conf
              subPath: n3iwfcfg.conf
            - name: startup-script
              mountPath: /free5gc/n3iwf/n3iwf-ipsec.sh
              subPath: n3iwf-ipsec.sh
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
      volumes:
        - name: config
          configMap:
            name: n3iwf-config
        - name: startup-script
          configMap:
            name: n3iwf-startup
            defaultMode: 0777
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "n3iwf"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: n3iwf
spec:
  selector:
    app: n3iwf
  clusterIP: None
