examples/5g-network/k8s/nrf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "nrf"
      app: nrf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "nrf"
        app: nrf
    spec:
      hostname: nrf
      containers:
        - name: nrf
          image: free5gc-compose_free5gc-nrf
          imagePullPolicy: Never
          command: ["./nrf", "-nrfcfg", "../config/nrfcfg.conf"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/nrfcfg.conf
              subPath: nrfcfg.conf
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
          ports:
            - containerPort: 29510
      volumes:
        - name: config
          configMap:
            name: nrf-config
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "nrf"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: nrf
spec:
  selector:
    app: nrf
  clusterIP: None
