examples/5g-network/k8s/nssf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "nssf"
      app: nssf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "nssf"
        app: nssf
    spec:
      hostname: nssf
      imagePullSecrets:
      - name: gcrsecret
      containers:
        - name: nssf
          image: gcr.io/architecturecloudnative/free5gc-compose_free5gc-nssf
          imagePullPolicy: IfNotPresent
          command: ["./nssf", "-nssfcfg", "../config/nssfcfg.conf"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/nssfcfg.conf
              subPath: nssfcfg.conf
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
          ports:
            - containerPort: 29531
      volumes:
        - name: config
          configMap:
            name: nssf-config
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "nssf"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: nssf
spec:
  selector:
    app: nssf
  clusterIP: None
