examples/5g-network/k8s/pcf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "pcf"
      app: pcf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "pcf"
        app: pcf
    spec:
      hostname: pcf
      imagePullSecrets:
      - name: gcrsecret
      containers:
        - name: pcf
          image: gcr.io/architecturecloudnative/free5gc-compose_free5gc-pcf
          imagePullPolicy: IfNotPresent
          command: ["./pcf", "-pcfcfg", "../config/pcfcfg.conf"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/pcfcfg.conf
              subPath: pcfcfg.conf
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
          ports:
            - containerPort: 29509
      volumes:
        - name: config
          configMap:
            name: pcf-config
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "pcf"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: pcf
spec:
  selector:
    app: pcf
  clusterIP: None
