examples/5g-network/k8s/ran.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "ran"
      app: ran
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "ran"
        app: ran
    spec:
      hostname: ran
       imagePullSecrets:
      - name: gcrsecret
      containers:
        - name: ran
          image: gcr.io/architecturecloudnative/free5gc-test:nsm
          imagePullPolicy: IfNotPresent
          command: ["tail", "-f", "/dev/null"]
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
        - name: tcpdump
          image: corfr/tcpdump
          args: ["-i", "any", "-w", "/data/dump.pcap"]
metadata:
  name: "ran"
  namespace: default
  annotations:
    ns.networkservicemesh.io: 5g-network?app=n2,5g-network?app=n3
---
apiVersion: v1
kind: Service
metadata:
  name: ran
spec:
  selector:
    app: ran
  clusterIP: None
