examples/5g-network/k8s/smf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "smf"
      app: smf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "smf"
        app: smf
    spec:
      hostname: smf
      imagePullSecrets:
      - name: gcrsecret
      containers:
        - name: smf
          image: gcr.io/architecturecloudnative/free5gc-compose_free5gc-smf
          imagePullPolicy: IfNotPresent
          command: ['sh', '-c', "until nslookup nrf.default.svc.cluster.local && nslookup upf-pfcp.5g-network.nsm.local && nslookup n4.5g-network.nsm.local && nslookup upf.5g-network.nsm.local; do sleep 2; done; ./smf -smfcfg ../config/smfcfg.conf -uerouting ../config/uerouting.yaml;"]
          # command: ["./smf", "-smfcfg", "../config/smfcfg.conf", "-uerouting", "../config/uerouting.yaml"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/smfcfg.conf
              subPath: smfcfg.conf
            - name: uerouting
              mountPath: /free5gc/config/uerouting.yaml
              subPath: uerouting.yaml
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
          readinessProbe:
            exec:
              command: ['sh', '-c', 'test `ps cax | grep smf | grep -v grep | wc -l` = "1"'] 
          ports:
            - containerPort: 29502
      volumes:
        - name: config
          configMap:
            name: smf-config
        - name: uerouting
          configMap:
            name: uerouting-config
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "smf"
  namespace: default
  annotations:
    ns.networkservicemesh.io: 5g-network?app=n4
---
apiVersion: v1
kind: Service
metadata:
  name: smf
spec:
  selector:
    app: smf
  clusterIP: None
