examples/5g-network/k8s/udm.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "udm"
      app: udm
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "udm"
        app: udm
    spec:
      hostname: udm
      containers:
        - name: udm
          image: free5gc-compose_free5gc-udm
          imagePullPolicy: Never
          command: ["./udm", "-udmcfg", "../config/udmcfg.conf"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/udmcfg.conf
              subPath: udmcfg.conf
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
          ports:
            - containerPort: 29503
      volumes:
        - name: config
          configMap:
            name: udm-config
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "udm"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: udm
spec:
  selector:
    app: udm
  clusterIP: None
