examples/5g-network/k8s/udr.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "udr"
      app: udr
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "udr"
        app: udr
    spec:
      hostname: udr
      containers:
        - name: udr
          image: free5gc-compose_free5gc-udr
          imagePullPolicy: Never
          command: ["./udr", "-udrcfg", "../config/udrcfg.conf"]
          # securityContext:
          #   capabilities:
          #     add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/udrcfg.conf
              subPath: udrcfg.conf
            - name: free5gc-config
              mountPath: /free5gc/config/free5GC.conf
              subPath: free5GC.conf
          ports:
            - containerPort: 29504
      volumes:
        - name: config
          configMap:
            name: udr-config
        - name: free5gc-config
          configMap:
            name: free5gc-config
metadata:
  name: "udr"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: udr
spec:
  selector:
    app: udr
  clusterIP: None
