examples/5g-network/k8s/upf.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "upf"
      app: upf
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "upf"
        networkservicemesh.io/impl: "5g-network"
        app: upf
    spec:
      hostname: upf
      serviceAccount: nsm-acc
      imagePullSecrets:
      - name: gcrsecret
      containers:
        - name: upf
          image: gcr.io/architecturecloudnative/free5gc-compose_free5gc-upf-b
          imagePullPolicy: IfNotPresent
          command: ['sh', '-c', "until nslookup upf.5g-network.nsm.local && nslookup upf-pfcp.5g-network.nsm.local; do echo waiting for upf; sleep 2; done; ./upf-nat.sh && ./free5gc-upfd -f ../config/upfcfg.yaml"]
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          volumeMounts:
            - name: config
              mountPath: /free5gc/config/upfcfg.yaml
              subPath: upfcfg.yaml
            - name: startup-script
              mountPath: /free5gc/free5gc-upfd/upf-nat.sh 
              subPath: upf-nat.sh   
          readinessProbe:
            exec:
              command: ['sh', '-c', 'test `ps cax | grep free5gc-upfd | grep -v grep | wc -l` = "1"'] 
        - name: tcpdump
          image: corfr/tcpdump
          args: ["-i", "any", "-w", "/data/dump.pcap", "-U"]
        - name: sidecar-endpoint
          image: networkservicemesh/icmp-dns-sidecar-nse:latest
          command: ["/bin/sidecar-nse", "-dns"]
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              networkservicemesh.io/socket: 1
        - name: sidecar-endpoint-pfcp
          image: networkservicemesh/icmp-dns-sidecar-nse:latest
          command: ["/bin/sidecar-nse", "-dns"]
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              networkservicemesh.io/socket: 1
        - name: coredns
          image: networkservicemesh/coredns:master
          imagePullPolicy: IfNotPresent
          args: ["-conf", "/etc/coredns/Corefile"]
          volumeMounts:
          - mountPath: /etc/coredns
            name: nsm-coredns-volume
      volumes:
        - name: nsm-coredns-volume
          emptyDir: {}
        - name: config
          configMap:
            name: upf-config
        - name: startup-script
          configMap:
            name: upf-startup
            defaultMode: 0777            
metadata:
  name: "upf"
  namespace: default
  # annotations:
  #   ns.networkservicemesh.io: 4g-network?app=s6a
---
apiVersion: v1
kind: Service
metadata:
  name: upf
spec:
  selector:
    app: upf
  clusterIP: None
